Archive2/26/10ca1b6f5af13e/output
main.cpp:25:16: error: no type named 'type' in 'struct std::enable_if<false, void>'
 class vec_t<int> {};
                ^
main.cpp:25:16: error: template argument 2 is invalid
main.cpp:28:25: error: no type named 'type' in 'struct std::enable_if<false, void>'
 class vec_t<int,check_t<int>> {};
                         ^
main.cpp:28:25: error: template argument 2 is invalid
main.cpp:28:28: error: template argument 2 is invalid
 class vec_t<int,check_t<int>> {};
                            ^
